# rs-libreoffice-bindings

./: .gitignore  Cargo.toml  README.md  build.rs  lokbridge.h  lokbridge_impl.c
examples/: docx_to_pdf.rs  forked_process.rs  pptx_to_pdf.rs  simple_load_and_convert.rs  xlsx_to_html.rs
fixtures/: example.docx  example.xlsx
headers/: LibreOfficeKitInit.h
src/: lib.rs
