[package]
name = "rs-libreoffice-bindings"
version = "0.0.2"
edition = "2024"
exclude = ["fixtures", "examples"]
authors = ["whutchinson98"]
include = ["src/**/*.rs"]
homepage = "https://github.com/whutchinson98/rs-libreoffice-bindings"
repository = "https://github.com/whutchinson98/rs-libreoffice-bindings"
license = "MIT"
readme = "README.md"
keywords = ["LibreOffice", "LibreOfficeKit", "lok", "ffi"]
description = "LibreOfficeKit bindings for Rust"

[package.metadata]
links = "lokbridge"

[dependencies]

[build-dependencies]
bindgen = "0.71.0"
cc = "1.2.17"

[dev-dependencies]
nix = { version = "0.29.0", features = ["process"] }
