[package]
name = "rs-libreoffice-bindings"
version = "0.0.7"
edition = "2024"
exclude = ["fixtures", "examples", "output"]
authors = ["whutchinson98"]
include = [
  "src/**/*.rs",
  "lokbridge.h",
  "lokbridge_impl.c", # This is the critical file you need to include
  "headers/**/*",
  "build.rs",
]
homepage = "https://github.com/whutchinson98/rs-libreoffice-bindings"
repository = "https://github.com/whutchinson98/rs-libreoffice-bindings"
license = "MIT"
readme = "README.md"
keywords = ["LibreOffice", "LibreOfficeKit", "lok", "ffi"]
description = "LibreOfficeKit bindings for Rust"

[dependencies]

[build-dependencies]
bindgen = "0.71.0"
cc = "1.2.17"

[dev-dependencies]
nix = { version = "0.29.0", features = ["process"] }
